Import of PLICEASE/PlugAuth-Plugin-LDAP-0.03 from CPAN.
gitpan-cpan-distribution: PlugAuth-Plugin-LDAP
gitpan-cpan-version:      0.03
gitpan-cpan-path:         PLICEASE/PlugAuth-Plugin-LDAP-0.03.tar.gz
gitpan-cpan-author:       PLICEASE
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -8,17 +8,13 @@ build_requires:
   Test::More: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.30
-dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.66, CPAN::Meta::Converter version 2.130880'
-license: restrictive
+dynamic_config: 0
+generated_by: 'Dist::Zilla version 4.300034, CPAN::Meta::Converter version 2.130880'
+license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: PlugAuth-Plugin-LDAP
-no_index:
-  directory:
-    - t
-    - inc
 requires:
   Log::Log4perl: 0
   Net::LDAP: 0
@@ -26,4 +22,5 @@ requires:
   PlugAuth::Role::Auth: 0
   PlugAuth::Role::Plugin: 0
   Role::Tiny::With: 0
-version: 0.02
+  perl: v5.10.0
+version: 0.03
