--- a/dist.ini
+++ b/dist.ini
@@ -1,10 +1,10 @@
 name    = PlugAuth-Plugin-LDAP
 author  = Graham Ollis <gollis@sesda3.com>
-license = None
+license = Perl_5
 copyright_holder = NASA GSFC
 copyright_year   = 2012
 
-version = 0.02
+version = 0.03
 
 [@ACPS::MakeMaker]
 
@@ -16,3 +16,5 @@ remove = strict
 remove = warnings
 
 [ACPS::RPM]
+
+[UploadToCPAN]
