--- a/t/data/10/extra.conf
+++ b/t/data/10/extra.conf
@@ -1,5 +1,5 @@
 "ldap" : {
   "server" : "ldap://192.168.1.1:389",
-  "dn" : "uid=%s, ou=people, dc=users, dc=eosdis, dc=nasa, dc=gov",
+  "dn" : "uid=%s, ou=people, dc=users, dc=example, dc=com",
   "authoritative" : 1
 }
