Import of PLICEASE/PlugAuth-Plugin-LDAP-0.04 from CPAN.
gitpan-cpan-distribution: PlugAuth-Plugin-LDAP
gitpan-cpan-version:      0.04
gitpan-cpan-path:         PLICEASE/PlugAuth-Plugin-LDAP-0.04.tar.gz
gitpan-cpan-author:       PLICEASE
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = NASA GSFC
 copyright_year   = 2012
 
-version = 0.03
+version = 0.04
 
 [@ACPS::MakeMaker]
 
@@ -17,4 +17,4 @@ remove = warnings
 
 [ACPS::RPM]
 
-[UploadToCPAN]
+[Author::Plicease::UploadToCPAN]
