Import of PLICEASE/PlugAuth-Plugin-LDAP-0.05 from CPAN.
gitpan-cpan-distribution: PlugAuth-Plugin-LDAP
gitpan-cpan-version:      0.05
gitpan-cpan-path:         PLICEASE/PlugAuth-Plugin-LDAP-0.05.tar.gz
gitpan-cpan-author:       PLICEASE
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -23,4 +23,8 @@ requires:
   PlugAuth::Role::Plugin: 0
   Role::Tiny::With: 0
   perl: v5.10.0
-version: 0.04
+resources:
+  bugtracker: https://github.com/plicease/plugauth-plugin-ldap/issues
+  homepage: http://perl.wdlabs.com/PlugAuth-Plugin-LDAP/
+  repository: git://github.com/plicease/plugauth-plugin-ldap.git
+version: 0.05
