--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = NASA GSFC
 copyright_year   = 2012
 
-version = 0.04
+version = 0.05
 
 [@ACPS::MakeMaker]
 
@@ -17,4 +17,21 @@ remove = warnings
 
 [ACPS::RPM]
 
+[AutoMetaResources]
+bugtracker.github = user:plicease
+repository.github = user:plicease
+homepage = http://perl.wdlabs.com/%{dist}/
+
+[ReadmeAnyFromPod]
+type     = text
+filename = README
+location = build
+
+[ReadmeAnyFromPod / ReadMePodInRoot]
+type     = pod
+filename = README.pod
+location = root
+
 [Author::Plicease::UploadToCPAN]
+[Author::Plicease::Tests]
+
