Import of PLICEASE/PlugAuth-Plugin-LDAP-0.06 from CPAN.
gitpan-cpan-distribution: PlugAuth-Plugin-LDAP
gitpan-cpan-version:      0.06
gitpan-cpan-path:         PLICEASE/PlugAuth-Plugin-LDAP-0.06.tar.gz
gitpan-cpan-author:       PLICEASE
gitpan-cpan-maturity:     released

--- a/xt/release/release.yml
+++ b/xt/release/release.yml
@@ -2,7 +2,12 @@
 pod_spelling_system:
   # list of words that are spelled correctly
   # (regardless of what spell check thinks)
-  stopwords: []
+  stopwords:
+    - GSFC
+    - LDAP
+    - PlugAuth
+    - conf
+    - dn
 
 pod_coverage:
   # format is "Class#method" or "Class", regex allowed
